fix: Made changes to the tracking device and the driver resources and removed a few endpoints from tracking device
